mdapipkg/objects/Doctor_Patient_Assignment__c/Doctor_Patient_Assignment__c.object-meta.xml
<CustomObject>
    <description>Junction object linking Doctor and User Profile to model doctor-patient relationships.</description>
    <label>Doctor Patient Assignment</label>
    <nameField>
        <displayFormat>DP-{0000}</displayFormat>
        <label>Doctor Patient assignment no.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Doctor Patient Assignments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>