mdapipkg/objects/Doctor_Patient_Assignment__c/fields/Primary_Care__c.field-meta.xml
<CustomField>
    <fullName>Primary_Care__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Primary Care</label>
    <type>Checkbox</type>
</CustomField>